--- a/OneTwoThree/src/main/res/layout/activity_main.xml
+++ b/OneTwoThree/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:visibility="gone"
-        tools:context=".SkeletonActivity" >
+        tools:context=".OneTwoThreeActivity" >
 
         <TextView
             android:id="@+id/instructions"
@@ -132,7 +132,7 @@
         android:layout_centerVertical="true"
         android:orientation="vertical"
         android:visibility="gone"
-        tools:context=".SkeletonActivity" >
+        tools:context=".OneTwoThreeActivity" >
 
         <LinearLayout
             android:id="@+id/secret_layout"
@@ -142,7 +142,7 @@
             android:layout_centerVertical="true"
             android:orientation="vertical"
             android:visibility="visible"
-            tools:context=".SkeletonActivity"
+            tools:context=".OneTwoThreeActivity"
             tools:ignore="UselessParent" >
 
             <TextView
